# dbgate

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  a.out  docker-compose.yaml  vcpkg.json
.claude/: ownership-map.yaml  settings.json
.claude/agent-memory/architect/: MEMORY.md  interfaces.md
.claude/agent-memory/qa-engineer/: MEMORY.md
.claude/agents/: architect.md  go-engineer.md  infra-engineer.md  network-engineer.md  qa-engineer.md  security-engineer.md  technical-writer.md
.claude/rules/: cpp-core.md  general.md  go-tools.md  testing.md
.claude/skills/build-test/: SKILL.md
.claude/skills/doc-impact/: SKILL.md
.claude/skills/start-task/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  prepare-host-mounts.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs-impact-check.yml  fuzz-weekly.yml  go.yml  integration.yml  lint.yml  test-data-check.yml
benchmarks/: docker-compose.benchmark.yml  policy-benchmark.yaml  run_benchmark.sh
config/: policy.yaml
deploy/: .env.example  Dockerfile  Dockerfile.tools  docker-compose.yaml  haproxy.cfg
docs/: architecture.md  data-flow.md  demo-scenarios.md  failure-modes.md  interface-reference.md  policy-engine.md  project-spec-v3.md  runbook.md  sequences.md  test-data-guidelines.md  testing-strategy.md  threat-model.md  uds-protocol.md
docs/adr/: 001-boost-asio-over-raw-epoll.md  002-handshake-passthrough.md  003-gcc-over-clang.md  004-yaml-policy-format.md  005-cpp-go-language-split.md  006-sql-parser-scope.md  007-ssl-tls-async-stream.md
docs/images/: demo-architecture.txt
docs/process/: README.md  agent-catalog.md  agent-workflow.md  claude-code-workflow.md  doc-impact-policy.md  execution-brief-template.md  handoff-report-schema.md  state-transition-checklist.md
docs/reports/: DON-24-network-engineer-failopen-fix-report.md  DON-24-qa-report.md  DON-24-tw-report.md
scripts/: check-doc-impact.sh  check-test-data.sh  install-hooks.sh
scripts/hooks/: commit-msg  post-edit-format.sh  pre-bash-safety.sh  pre-commit  pre-push  test-safety.sh
src/: main.cpp
src/common/: async_stream.cpp  async_stream.hpp  types.hpp
src/health/: health_check.cpp  health_check.hpp
src/logger/: log_types.hpp  structured_logger.cpp  structured_logger.hpp
src/parser/: injection_detector.cpp  injection_detector.hpp  procedure_detector.cpp  procedure_detector.hpp  sql_parser.cpp  sql_parser.hpp
src/policy/: policy_engine.cpp  policy_engine.hpp  policy_loader.cpp  policy_loader.hpp  policy_version_store.cpp  policy_version_store.hpp  rule.hpp
src/protocol/: command.cpp  command.hpp  handshake.cpp  handshake.hpp  handshake_detail.hpp  mysql_packet.cpp  mysql_packet.hpp
src/proxy/: proxy_server.cpp  proxy_server.hpp  session.cpp  session.hpp
src/stats/: stats_collector.hpp  uds_server.cpp  uds_server.hpp
tests/: test_async_stream.cpp  test_edge_cases.cpp  test_handshake_auth.cpp  test_injection_detector.cpp  test_logger.cpp  test_mysql_packet.cpp  test_policy_engine.cpp  test_proxy_pipeline.cpp  test_proxy_server.cpp  test_sql_parser.cpp  test_ssl_tls.cpp  test_stats_collector.cpp  test_uds_server.cpp
tests/fuzz/: fuzz_mysql_packet.cpp  fuzz_policy_engine.cpp  fuzz_sql_parser.cpp
tests/fuzz/corpus/mysql_packet/: DATA_CATALOG.yaml
tests/fuzz/corpus/policy_engine/: DATA_CATALOG.yaml
tests/fuzz/corpus/sql_parser/: DATA_CATALOG.yaml  alter_table.sql  call_proc.sql  create_table.sql  insert.sql  prepare.sql  select_join.sql  sqli_or.sql  update.sql
tests/integration/: test_scenarios.sh
tools/: go.mod
tools/cmd/dbgate-cli/: main.go  main_test.go
tools/cmd/dbgate-dashboard/: main.go  main_test.go
tools/internal/client/: client.go  client_test.go  types.go
tools/internal/dashboard/: handlers.go  handlers_test.go  server.go  server_test.go  templates.go
tools/internal/dashboard/static/: dashboard.js
tools/internal/dashboard/templates/: index.html  layout.html  policy-tester.html
tools/internal/dashboard/templates/partials/: chart.html  policy-result.html  policy-versions.html  sessions.html  stats.html
